--- a/src/app/pyproject.toml
+++ b/src/app/pyproject.toml
@@ -26,6 +26,7 @@ redis = "^4.6.0"
 odmantic = "^0.9.2"
 pydantic-settings = "^2.0.2"
 pyopenssl = "^23.2.0"
+docker-auto-labels = "^0.2.3"
 
 
 [tool.poetry.dev-dependencies]
